--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "description": "",
   "dependencies": {
     "@line/bot-sdk": "^9.8.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "osc": "^2.4.5"
   },
   "type": "module"
 }
